Add EmailJS integration, update website description, and improve contact form functionality

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ovrika - Yazılım ve Danışmanlık Çözümleri. Web uygulamaları, mobil uygulamalar ve dijital dönüşüm hizmetleri. Ankara merkezli teknoloji şirketi."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/OvrikaLogo.png" />
     <!--
